# eos-action-proof-maker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-cargo.sh
.github/workflows/: rust.yml
example/: eos-block-73165491.json  eos-block-73202214.json  eos-block-73393923.json  eos-block-80440580.json  example-1-submission-material.json  example-1.sh  example-2-submission-material.json  example-2.sh  example.sh  sample-material-1.json  sample-material-2.json
src/: action_return_values.rs  constants.rs  eos_merkle_utils.rs  error.rs  find_index_of_action.rs  generate_output.rs  generate_proof.rs  get_action_digest.rs  get_eos_actions_from_transactions.rs  initialize_logger.rs  main.rs  parse_cli_args.rs  parse_eos_action.rs  parse_eos_action_receipts.rs  parse_eos_actions.rs  parse_eos_block.rs  parse_input_json.rs  state.rs  types.rs  usage.rs  usage_info.rs  utils.rs  validate_action_mroot.rs  validate_index.rs  verify_proof.rs
src/test_utils/: mod.rs  sample-block-1.json  sample-block-4.json  sample-block-5.json  sample-block-6.json  sample-submission-json  test_utils.rs
